--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bpl-node",
-   "version": "1.0.6",
+   "version": "1.0.7777777
  "private": true,
   "scripts": {
     "start": "node app.js",
