--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bpl-node",
-   "version": "1.2.7",
- "private": true,
+  "version": "1.2.7",
+  "private": true,
   "scripts": {
     "start": "node app.js",
     "doc": "docco -t docs/template/arkio.jst -c docs/template/arkio.css modules/* app.js README.md",
@@ -14,11 +14,11 @@
   },
   "author": "Boris Povod <boris@crypti.me>, Pavel Nekrasov <landgraf.paul@gmail.com>, Oliver Beddows <oliver@lisk.io>, FX Thoorens <fx.thoorens@ark.io>",
   "dependencies": {
-    "bpljs":"github:marilynpereira03/BPL-js#wbx",
     "async": "=2.0.1",
     "bigdecimal": "^0.6.1",
     "bip39": "^2.2.0",
     "body-parser": "=1.15.2",
+    "bpljs": "github:marilynpereira03/BPL-js#wbx",
     "bytebuffer": "=5.0.1",
     "change-case": "=3.0.0",
     "colors": "=1.1.2",
@@ -32,6 +32,7 @@
     "express-rate-limit": "=2.5.0",
     "extend": "=3.0.0",
     "forever": "^0.15.3",
+    "git-utils": "^5.2.0",
     "ip": "=1.1.3",
     "json-format": "^1.0.1",
     "json-schema": "=0.2.3",
