--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-rate-limit": "=2.5.0",
     "extend": "=3.0.0",
     "forever": "^0.15.3",
+    "git-utils": "^5.2.1",
     "ip": "=1.1.3",
     "json-format": "^1.0.1",
     "json-schema": "=0.2.3",
@@ -45,6 +46,7 @@
     "popsicle": "=8.2.0",
     "pug": "^2.0.0-beta11",
     "randomstring": "=1.1.5",
+    "request": "^2.83.0",
     "rimraf": "=2.5.4",
     "secp256k1": "^3.5.0",
     "socket.io": "=1.4.8",
