--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "json-format": "^1.0.1",
     "json-schema": "=0.2.3",
     "json-sql": "LiskHQ/json-sql#27e1ed1",
+    "jsoncomp": "^1.6.1",
     "libpq": "^1.8.7",
     "lodash": "=4.16.2",
     "method-override": "=2.3.6",
